--- a/ProyectoTISJ-war/web/Resources/CSS/Base.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/Base.css
@@ -22,6 +22,7 @@
     -webkit-box-shadow: 10px 0px 5px #888888;
     -moz-box-shadow: 10px 0px 5px #888888;
     box-shadow: 10px 0px 5px #888888;
+    overflow-y: auto;
   }
 
 .contentBody {
