--- a/ProyectoTISJ-war/web/Resources/CSS/Docente.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/Docente.css
@@ -13,18 +13,13 @@
 }
 
 .nombreDocente{
-    z-index: 2;
-    top:0px; /*-100px*/
     font-size:20px;
     font-family:RobotoBold;
     text-align:center;
-    border-bottom:rgba(0, 0, 0, 0.3) 1px solid;
-    background-color: #222933;
     color: #FFFFFF;
-    height: 50px;
-    display: inline-block;
-    line-height: 50px;
     width: 100%;
+    background-color: #78909C;
+    line-height: 50px;
 }
 
 .nombreDocente:hover{
@@ -96,49 +91,77 @@
 
 @font-face {
     font-family: RobotoBold;
-    src: url(../Fonts/Roboto-Bold.ttf);
+    src: url(./Roboto-Bold.ttf);
 }
 
 @font-face {
     font-family: RobotoRegular;
-    src: url(../Fonts/Roboto-Regular.ttf);
+    src: url(./Roboto-Regular.ttf);
 }
 
 #menuContainer{
-    width: 1000px;
+    width: 100%;
     margin: 0 auto;
 }
 
 .menuOpcion{
-    width: 300px;
-    height: 300px;
-    background-color: #222933;
-    float: left;
-    margin: 5px;
+    width: 80%;
+    background-color: #FFFFFF;
+    margin: 0 auto;
     display: inline;
+    min-width: 500px;
+    padding-bottom: 10px;
+    margin-top: 15px;
+    -webkit-box-shadow: 10px 0px 5px #888888;
+    -moz-box-shadow: 10px 0px 5px #888888;
+    box-shadow: 5px 5px 5px #888888;
+    border: #AAAAAA solid 1px;
 }
 
 .imagenMenuOpcion{
-    height: 200px;
+    height: 30px;
+    width: 30px;
+    float: left;
+    border: black solid 3px;
+    border-right: none;
+    padding-left: 5px;
+    padding-right: 5px;
+   // border-radius: 5px 0px 0px 5px;
+   border-left: none;
+   border-top: none;  
+/*   -webkit-filter: drop-shadow(0px 0px 3px rgba(0,0,0,0.9));
+    filter: url(#drop-shadow);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#000')";
+    filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#000')";*/
 }
 
 .Texto{
-    margin: 10px;
-    width: 80%;
+    /* margin: 10px; */
+    width: calc(100% - 40px);
     height: 30px;
     font-family: RobotoRegular;
-    color: #FFFFFF;
+    color: #000000;
     background-color: transparent;
-    border-color: #FFFFFF;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 5px;
+    border-bottom: black solid 3px;//
+    border-radius: 0px 5px 5px 0px;
     font-size: 20px;
+    padding: 0px;
+    border-left: none;
+    border-top: none;
+    border-right: none;
 }
 
 .Texto:focus{
-    color: #222933;
-    background-color: #FFFFFF;
+    outline: 0;
+}
+
+.Texto:-webkit-autofill,
+.Texto:-webkit-autofill:hover,
+.Texto:-webkit-autofill:focus,
+.Texto:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: rgb(250, 255, 189);
+    border-bottom: #FFFFFF solid 3px;
 }
 
 .boton{    
@@ -182,4 +205,32 @@ input:-webkit-autofill {
 .circulo{
     border: white solid 5px;
     border-radius: 100%;
+}
+
+.styled-select select {
+    margin: 10px;
+    width: 80%;
+    height: 40px;
+    font-family: RobotoRegular;
+    color: #FFFFFF;
+    background-color: transparent;
+    border-color: #FFFFFF;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
+.styled-select select:focus{
+    color: #222933;
+    background-color: #FFFFFF;
+}
+
+.inputContainer{
+    text-align: left;
+    margin: 20px;
+}
+
+.imagenMenuOpcionFocused{
+    background-color: white;
 }
