--- a/ProyectoTISJ-war/web/Views/index.xhtml
+++ b/ProyectoTISJ-war/web/Views/index.xhtml
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../Resources/CSS/Base.css" />
         <link rel="stylesheet" href="../Resources/CSS/Docente.css" />
         <link rel="stylesheet" href="../Resources/CSS/Mensajes.css" />
+        <link rel="stylesheet" href="../Resources/CSS/Lista.css" />
         
         <script src="../Resources/Scripts/jquery-1.11.3.min.js"></script>
         <script src="../Resources/Scripts/jquery-ui.js"></script>
