--- a/ProyectoTISJ-war/web/Resources/CSS/login.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/login.css
@@ -1,10 +1,11 @@
 
-.loginContainer {	
+.loginContainerForm {
+    font-family: RobotoRegular; 
 	padding-top: 25px;
 	margin-right: 25%;
 	margin-left: 25%;
 	text-align: center;
-	height: 90px;
+	height: 120px;
 	background-color: #FFF;
 	box-shadow: 0px 0px 15px 0px grey;
 }
@@ -12,18 +13,16 @@
 
 .barraGris {
 	padding-top: 10%;
-	height: 100px;
-	margin-top: 20%;
+	height: 150px;
+	margin-top: 10%;
 	margin-bottom: 20%;
 	box-shadow: 0px 0px 15px 0px grey;
-	background-color: black;
+	background-color: #37474F;
 }
 
-.titulo {
+.tituloLogin {
 	color: #FFF;
 	font-family: sans-serif;
 	text-align: center;
-	margin-bottom: 2%;
-
-	
+	margin-bottom: 2%;	
 }
