--- a/ProyectoTISJ-war/web/Resources/CSS/Lista.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/Lista.css
@@ -2,15 +2,15 @@
 
 @font-face {
     font-family: RobotoRegular;
-    src: url(./Roboto-Regular.ttf);
+    src: url(../Fonts/Roboto-Regular.ttf);
 }
 
 @font-face{
     font-family: RobotoLight;
-    src: url(Roboto-Light.ttf);
+    src: url(../Fonts/Roboto-Light.ttf);
 }
 
-.cabezera{
+.cabecera{
     width: 100%;
     height: 100px;
     background-color: #B0BEC5;
@@ -132,11 +132,4 @@
 .negrita{
     font-family: RobotoRegular;
     display: inline;    
-}
-
-.ImagenItem{
-    margin: 0 auto; 
-    margin-top: 5px; 
-    border: none; 
-    box-shadow: none;
 }
