--- a/ProyectoTISJ-war/web/Views/index.xhtml
+++ b/ProyectoTISJ-war/web/Views/index.xhtml
@@ -18,6 +18,7 @@
         <script src="../Resources/Scripts/Slimscroll.js"></script>
         <script src="../Resources/Scripts/ScrollBar.js"></script>
         <script src="../Resources/Scripts/LlenarCamposFadeIn.js"></script>
+        <script src="../Resources/Scripts/ListarUsuarios.js"></script>
     </h:head>
     <h:body>
         <h:panelGroup rendered="#{login.rolSeleccionado == 'Administrador'}" >
