--- a/ProyectoTISJ-war/web/Resources/CSS/login.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/login.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: RobotoRegular;
+    src: url(../Fonts/Roboto-Regular.ttf);
+}
+
 body{
     margin: 0;
 }
@@ -7,7 +12,6 @@ body{
     position: absolute;
     height: 300px;
     margin-top: -250px;
-    /* left: 50%; */
     width: 100%;
     box-shadow: gray 0px 5px 5px;
     background-color: #222933;
@@ -19,7 +23,6 @@ body{
     font-family: RobotoRegular;
     font-size: 20px;
     float: left;
-    /* height: auto; */
     top: 500px;
     width: 100%;
     margin: 0 auto;
@@ -35,10 +38,8 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    /* margin-top: -200px; */
     margin-left: -450px;
     border-radius: 20px 20px 20px 20px;
-    /* overflow: hidden; */
     box-shadow: grey 5px 5px 15px;
     border: grey solid 1px;
 }
@@ -62,7 +63,6 @@ body{
     color: #222933;
     background-color: #FFFFFF;
     outline: none;
-    //border: none;
 }
 
 #contenedorBotones{
@@ -78,7 +78,6 @@ body{
     width: 200px;
     height: 200px;
     background-color: #263238;
-    /* float: left; */
     margin: 5px;
     display: inline-table;
     margin: 0 auto;
