--- a/ProyectoTISJ-war/web/Views/index.xhtml
+++ b/ProyectoTISJ-war/web/Views/index.xhtml
@@ -4,21 +4,14 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
-        <link rel="stylesheet" href="../Resources/CSS/Base.css" />
-        <link rel="stylesheet" href="../Resources/CSS/Docente.css" />
-        <link rel="stylesheet" href="../Resources/CSS/Mensajes.css" />
-        <link rel="stylesheet" href="../Resources/CSS/Lista.css" />
+        <link rel="stylesheet" href="../Resources/CSS/Mensajes.css" />    
+        <link rel="stylesheet" href="../Resources/CSS/index.css" />
+        <link rel="stylesheet" href="../Resources/CSS/ListarUsuarios.css" /> 
+        <link rel="stylesheet" href="../Resources/CSS/RegistrarUsuarios.css" /> 
         
         <script src="../Resources/Scripts/jquery-1.11.3.min.js"></script>
-        <script src="../Resources/Scripts/jquery-ui.js"></script>
-        <script src="../Resources/Scripts/MouseOverDocente.js"></script>
-        <script src="../Resources/Scripts/RotateAddButton.js"></script>
-        <script src="../Resources/Scripts/optionMenuDocente.js"></script>
-        <script src="../Resources/Scripts/UpdateImage.js"></script>
-        <script src="../Resources/Scripts/Slimscroll.js"></script>
-        <script src="../Resources/Scripts/ScrollBar.js"></script>
-        <script src="../Resources/Scripts/LlenarCamposFadeIn.js"></script>
         <script src="../Resources/Scripts/ListarUsuarios.js"></script>
+        <script src="../Resources/Scripts/RegistrarUsuarios.js"></script>
     </h:head>
     <h:body>
         <h:panelGroup rendered="#{login.rolSeleccionado == 'Administrador'}" >
