Se corrgieron varios errores en listar cursos

--- a/ProyectoTISJ-war/web/Views/index.xhtml
+++ b/ProyectoTISJ-war/web/Views/index.xhtml
@@ -12,6 +12,17 @@
         <script src="../Resources/Scripts/jquery-1.11.3.min.js"></script>
         <script src="../Resources/Scripts/ListarUsuarios.js"></script>
         <script src="../Resources/Scripts/RegistrarUsuarios.js"></script>
+        
+        <script type="text/javascript">
+    function toggle_visibility(id) 
+    {
+        var e = document.getElementById(id);
+        if ( e.style.display === 'block' )
+            e.style.display = 'none';
+        else
+            e.style.display = 'block';
+    }
+</script>
     </h:head>
     <h:body>
         <h:panelGroup rendered="#{login.rolSeleccionado == 'Administrador'}" >
