--- a/ProyectoTISJ-war/web/Resources/CSS/Mensajes.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/Mensajes.css
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     background-position: 10px center;
     display: flex;
+    width: 100%;
 }
 .info {
     color: #00529B;
