--- a/ProyectoTISJ-war/web/Resources/CSS/ListarUsuarios.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/ListarUsuarios.css
@@ -100,3 +100,12 @@
     display: flex;
     color: grey;
 }
+
+#BotonFiltro{
+    margin-left: 50px;
+}
+
+.FormFiltro{
+    text-align: left;
+    font-family: RobotoRegular;
+}
