--- a/ProyectoTISJ-war/web/Views/index.xhtml
+++ b/ProyectoTISJ-war/web/Views/index.xhtml
@@ -16,6 +16,7 @@
         <script src="../Resources/Scripts/Menu.js"></script>
         <script src="../Resources/Scripts/RegistrarAsignatura.js"></script>
         <script src="../Resources/Scripts/ReegistrarCurso.js"></script>
+        <script src="../Resources/Scripts/Index.js"></script>
         
         <script type="text/javascript">
     function toggle_visibility(id) 
