--- a/ProyectoTISJ-war/web/Resources/CSS/index.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/index.css
@@ -28,22 +28,25 @@
 .cabecera{
     width: 100%;
     height: 50px;
-    background-color: #B0BEC5;
+    background-color: #FFFFFF;
     border-bottom: #444444 solid 1px;
     position: fixed;
     z-index: 1;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 10px 5px #888888;
+    -moz-box-shadow: 0px 10px 5px #888888;
+    box-shadow: 0px 10px 5px #888888;
 }
 
 .titulo{
     width: 100%;
     height: 50px;
-    color: #FFFFFF;
     font-family: RobotoRegular;
     font-size: 30px;
     text-align: left;
     margin-left: 30px;
     line-height: 50px;
-    text-shadow: rgb(0, 0, 0) 0px 0px 20px;
+    display: flex;
 }
 
 #contenedor{
