--- a/ProyectoTISJ-war/web/Views/index.xhtml
+++ b/ProyectoTISJ-war/web/Views/index.xhtml
@@ -8,8 +8,10 @@
         <link rel="stylesheet" href="../Resources/CSS/index.css" />
         <link rel="stylesheet" href="../Resources/CSS/ListarUsuarios.css" /> 
         <link rel="stylesheet" href="../Resources/CSS/RegistrarUsuarios.css" />
+        <link rel="stylesheet" href="../Resources/CSS/jquery-ui.css" />
         
-        <script src="../Resources/Scripts/jquery-1.11.3.min.js"></script>
+       <script src="../Resources/Scripts/jquery-1.11.3.min.js"></script>
+       <script src="../Resources/Scripts/jquery-ui.js"></script>
         <script src="../Resources/Scripts/Slimscroll.js"></script>
         <script src="../Resources/Scripts/ListarUsuarios.js"></script>
         <script src="../Resources/Scripts/RegistrarUsuarios.js"></script>
@@ -18,17 +20,8 @@
         <script src="../Resources/Scripts/ReegistrarCurso.js"></script>
         <script src="../Resources/Scripts/Index.js"></script>
         <script src="../Resources/Scripts/RegistrarEvaluacion.js"></script>
-        
-        <script type="text/javascript">
-    function toggle_visibility(id) 
-    {
-        var e = document.getElementById(id);
-        if ( e.style.display === 'block' )
-            e.style.display = 'none';
-        else
-            e.style.display = 'block';
-    }
-</script>
+        <script src="../Resources/Scripts/DatePicker.js"></script>
+
     </h:head>
     <h:body>
         <h:panelGroup rendered="#{login.rolSeleccionado == 'Administrador'}" >
