Se agregaron redirecciones (redirigir.js) a cada registro que fuera necesario (usuario, clase, encuesta). Se agregaron query para encuesta y encuesta curso en manejador de estudiantes, controlador y facade.

--- a/ProyectoTISJ-war/web/Views/index.xhtml
+++ b/ProyectoTISJ-war/web/Views/index.xhtml
@@ -21,6 +21,7 @@
         <script src="../Resources/Scripts/Index.js"></script>
         <script src="../Resources/Scripts/RegistrarEvaluacion.js"></script>
         <script src="../Resources/Scripts/DatePicker.js"></script>
+        <script src="../Resources/Scripts/RedirigirListado.js"></script>
 
     </h:head>
     <h:body>
