--- a/ProyectoTISJ-war/web/Views/index.xhtml
+++ b/ProyectoTISJ-war/web/Views/index.xhtml
@@ -25,6 +25,7 @@
         <script src="../Resources/Scripts/ImportarEncuesta.js"></script>
         <script src="../Resources/Scripts/ListarEncuesta.js"></script>
         <script src="../Resources/Scripts/RedirigirListado.js"></script>
+        <script src="../Resources/Scripts/Chart.js"></script>
 
     </h:head>
     <h:body>
