--- a/ProyectoTISJ-war/web/Resources/CSS/Mensajes.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/Mensajes.css
@@ -25,3 +25,20 @@
     background-color: #FFBABA;
     background-image: url(../Images/Error.png);
 }
+
+.error_404{
+    font-family:RobotoBold; 
+    font-size: 38px;
+    padding-top: 5%;
+    width: 900px;
+    text-align: center;
+    height: 175px;
+    background-color: #FFF;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -450px;
+    border-radius: 20px;
+    box-shadow: 5px 5px 15px #808080;
+    border: 1px solid #808080;
+}
