--- a/ProyectoTISJ-war/web/Resources/CSS/Mensajes.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/Mensajes.css
@@ -12,7 +12,7 @@
 .info {
     color: #00529B;
     background-color: #BDE5F8;
-    background-image: url(../Images/Info.png);
+    background-image: url(../Images/info_blue.png);
 }
 
 .warning {
