Se desarrollo caso de uso de editar perfil para todos los roles. Se modificaron los controladores para realizar los cambios en todos los roles.

--- a/ProyectoTISJ-war/web/Resources/CSS/Mensajes.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/Mensajes.css
@@ -6,8 +6,8 @@
     padding:8px 8px 8px 50px;
     background-repeat: no-repeat;
     background-position: 10px center;
-    display: flex;
-    width: 100%;
+    display: flex
+    /*width: 100%;*/
 }
 .info {
     color: #00529B;
