Se agrego indicador de carga (nuevo script y se modificaron funciones de redireccion). Se agrego redireccion luego de editar perfil y registrar evaluacion. Se agrego panel group para ocultar las opciones de informacion de docente al seleccionar docente para registrar curso.

--- a/ProyectoTISJ-war/web/Resources/CSS/index.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/index.css
@@ -264,3 +264,12 @@ a:hover {
 a:active {
     text-decoration: none;
 } 
+
+.carga{
+    position:absolute; 
+    margin-left: 50%;
+    margin-top: 30%;
+    padding: 1%;
+    color:#00529B;
+    text-align: center;
+}
