--- a/ProyectoTISJ-war/web/Resources/CSS/index.css
+++ b/ProyectoTISJ-war/web/Resources/CSS/index.css
@@ -13,6 +13,10 @@
     src: url(../Fonts/Roboto-Bold.ttf);
 }
 
+body{
+    margin: 0;
+}
+
 .contentBody {
     z-index: -1;
     position: absolute;
@@ -23,7 +27,7 @@
     right: 0;
     overflow: auto;
     text-align: center; 
-    background-color: #ECEFF1;
+    background-color: #ECEFF1;    
 }
 
 .cabecera{
@@ -271,16 +275,16 @@ a:active {
     left: 50%;
     margin-left: -25px;
     margin-top: -25px;
-    padding: 1%;
     font-family: RobotoBold;
     color:white;
     text-align: center;
 }
 
-.contenedor-carga{
+.contenedor-carga{    
     position:absolute; 
     width: 100%;
     height: 100%;
-    background-color: #4b3f3f;
+    background-color: #305f73;
     opacity: 0.6;
+    z-index: 999999999;
 }
